fix inventory
